# polyDFT

./: LICENSE  README.md  main.py  main_autodiff.py  main_w_functions.py  pyproject.toml  requirements.txt  setup.py
core/: arrays.py  grid.py
development_environment/: neutral_brush_dft.ipynb
dft/: mixers.py
docs/: polyDFT.md
polymer_dft/core/: arrays.py  grid.py  model.py  propagator.py
polymer_dft/numerics/: finite_diff.py
polymer_dft/tests/: test_crank_nicolson.py
src/dft/: core.py  solvers.py
